--- a/stylesheets/_admin.styl
+++ b/stylesheets/_admin.styl
@@ -26,6 +26,7 @@ strong
 fieldset
     legend
         font-weight: bold
+        padding: 8px
 input
 label
     display: block
